--- a/loginpage.html
+++ b/loginpage.html
@@ -13,34 +13,24 @@
     />
   </head>
   <body>
+    <div id="cursor-trail"></div>
+    <canvas id="neon-canvas"></canvas>
     <div class="login-container">
       <h2 class="overlay-font" data-text="Login">
         Login<span class="dots"
           ><span>.</span><span>.</span><span>.</span></span
         >
       </h2>
+      <p id="play-msg" class="play-msg">Don’t click the login button 👀</p>
+
+      <p id="warn-msg" class="warning-msg">Enter the credentials, bro 😎</p>
+
       <form class="center-form">
         <input type="text" placeholder="Username" required />
         <input type="password" placeholder="Password" required />
         <button type="submit">Login</button>
       </form>
     </div>
-    <script>
-      const dots = document.querySelectorAll(".dots span");
-      let step = 0;
-      setInterval(() => {
-        dots.forEach((dot, i) => {
-          // Animate: 1st down, 2nd up, 3rd down, then repeat
-          if (step % 3 === i) {
-            dot.style.transform = "translateY(8px)";
-          } else if ((step + 1) % 3 === i) {
-            dot.style.transform = "translateY(-8px)";
-          } else {
-            dot.style.transform = "translateY(8px)";
-          }
-        });
-        step = (step + 1) % 3;
-      }, 350);
-    </script>
+    <script src="loginpage.js"></script>
   </body>
 </html>
